--- a/artphoto.html
+++ b/artphoto.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="hline">
-            <li><a href="idexs.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li>Fine art prints</li>
         </nav>
