--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="hline">
-            <li><a href="idexs.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li>Contact</li>
             <li><a href="artphoto.html">Fine art prints</a></li>
         </nav>
